fix z-index image

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -69,6 +69,7 @@ section {
 .red-color-right-side {
     position: absolute;
     right: 0;
+    z-index: 1;
 }
 
 .portrait {
